Fix: some pixels

--- a/src/assets/components/body.css
+++ b/src/assets/components/body.css
@@ -1,5 +1,6 @@
 body {
   background: white;
+  overflow-x: hidden;
 }
 
 .body__global {
@@ -8,7 +9,7 @@ body {
   justify-content: center;
   align-items: center;
   position: absolute;
-  padding: 50px 10px 0px 10px;
+  padding: 50px 10px 10px 10px;
 }
 .body__internal {
   width: 80%;
