--- a/src/assets/components/bigCards.css
+++ b/src/assets/components/bigCards.css
@@ -115,3 +115,19 @@
     width: 200px;
   }
 }
+
+@media (max-width: 420px) {
+  .bigCards__card {
+    width: 100%;
+    height: auto;
+  }
+  .bigCards__background {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 0;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+  }
+}
