--- a/src/assets/components/header.css
+++ b/src/assets/components/header.css
@@ -366,3 +366,40 @@ a {
     scale: 1.02;
   }
 }
+
+@media (max-width: 482px) {
+  .menuTemplate {
+    height: auto;
+  }
+  .tColumn {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 10px;
+    height: 100%;
+    width: 100%;
+  }
+  .tColumn a {
+    display: flex;
+    align-items: center;
+    font-size: 14px !important;
+    width: 100%;
+    height: 38px;
+  }
+
+  .templateButtonsBottom {
+    position: absolute;
+    bottom: 50px;
+    display: flex;
+    gap: 10px;
+  }
+  .templateButtonsBottom {
+    position: relative;
+    bottom: 0px;
+    display: flex;
+    gap: 10px;
+  }
+  .menuTemplate__startHere a {
+    width: 100%;
+  }
+}
