--- a/src/assets/components/body.css
+++ b/src/assets/components/body.css
@@ -18,3 +18,23 @@ body {
   flex-direction: column;
   gap: 20px;
 }
+
+/* width */
+body::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+body::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+body::-webkit-scrollbar-thumb {
+  background: #012fd4;
+}
+
+/* Handle on hover */
+body::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
