--- a/src/assets/components/footer.css
+++ b/src/assets/components/footer.css
@@ -34,7 +34,18 @@
 @media (max-width: 583px) {
   .footerUp {
     justify-content: center;
-    padding: 20px 10% 20px 10%;
+    padding: 20px 0% 20px 0%;
+  }
+  .footerUp img {
+    transform: translate(-10px, 0px);
+  }
+  .footer__miniMenu {
+    font-size: 14px;
+    color: #454e66;
+    display: flex;
+    gap: 30px;
+    width: 100vw;
+    justify-content: center;
   }
 }
 
